--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing essential librarries:\n",
+    "# Importing essential libraries:\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +61,15 @@
        "      <th>workclass</th>\n",
        "      <th>fnlwgt</th>\n",
        "      <th>education</th>\n",
-       "      <th>education-num</th>\n",
-       "      <th>marital-status</th>\n",
+       "      <th>education_num</th>\n",
+       "      <th>marital_status</th>\n",
        "      <th>occupation</th>\n",
        "      <th>relationship</th>\n",
        "      <th>race</th>\n",
        "      <th>sex</th>\n",
-       "      <th>capital-gain</th>\n",
-       "      <th>capital-loss</th>\n",
-       "      <th>hours-per-week</th>\n",
+       "      <th>capital_gain</th>\n",
+       "      <th>capital_loss</th>\n",
+       "      <th>hours_per_week</th>\n",
        "      <th>country</th>\n",
        "      <th>salary</th>\n",
        "    </tr>\n",
@@ -170,21 +170,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   age          workclass  fnlwgt   education  education-num  \\\n",
+       "   age          workclass  fnlwgt   education  education_num  \\\n",
        "0   39          State-gov   77516   Bachelors             13   \n",
        "1   50   Self-emp-not-inc   83311   Bachelors             13   \n",
        "2   38            Private  215646     HS-grad              9   \n",
        "3   53            Private  234721        11th              7   \n",
        "4   28            Private  338409   Bachelors             13   \n",
        "\n",
-       "        marital-status          occupation    relationship    race      sex  \\\n",
+       "        marital_status          occupation    relationship    race      sex  \\\n",
        "0        Never-married        Adm-clerical   Not-in-family   White     Male   \n",
        "1   Married-civ-spouse     Exec-managerial         Husband   White     Male   \n",
        "2             Divorced   Handlers-cleaners   Not-in-family   White     Male   \n",
        "3   Married-civ-spouse   Handlers-cleaners         Husband   Black     Male   \n",
        "4   Married-civ-spouse      Prof-specialty            Wife   Black   Female   \n",
        "\n",
-       "   capital-gain  capital-loss  hours-per-week         country  salary  \n",
+       "   capital_gain  capital_loss  hours_per_week         country  salary  \n",
        "0          2174             0              40   United-States   <=50K  \n",
        "1             0             0              13   United-States   <=50K  \n",
        "2             0             0              40   United-States   <=50K  \n",
@@ -192,7 +192,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +200,38 @@
    "source": [
     "# Getting the first 5 records of the dataset\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.map(lambda x: x.replace('-','_'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'workclass', 'fnlwgt', 'education', 'education_num',\n",
+       "       'marital_status', 'occupation', 'relationship', 'race', 'sex',\n",
+       "       'capital_gain', 'capital_loss', 'hours_per_week', 'country', 'salary'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
